fixing error to push on heroku

--- a/public/404.html
+++ b/public/404.html
@@ -48,7 +48,7 @@
 
 <body class="text-center">
   <!-- This file lives in public/500.html -->
-  <h2 class="mb-5">began</h2>
+  <img src="began-logo.png", alt="Began logo" >
   <div>
     <div class="mb-4 text-center info">
       <h5>We're sorry, but the page you are looking for doesn't exist or is not available.</h5>
