--- a/public/500.html
+++ b/public/500.html
@@ -45,7 +45,7 @@
 
 <body class="text-center">
   <!-- This file lives in public/500.html -->
-  <img src="began-logo.png", alt="Began logo" >
+  <h2 class="mb-5">began</h2>
   <div>
     <div class="mb-4 text-center info">
       <h5>We're sorry, but something went wrong.</h5>
